modified:   README.md deleted:    articles/ellawie-article/IMG_3268.PNG deleted:    articles/ellawie-article/IMG_3269.PNG deleted:    articles/ellawie-article/IMG_3270.PNG new file:   articles/ellawie-article/ellawie-article.html new file:   articles/ellawie-article/ellawie-style.css new file:   articles/ellawie-article/photo-card-dropper.js modified:   articles/sah-article/sah-style.css deleted:    articles/saplit-article/IMG_20250930_202939.png deleted:    articles/saplit-article/IMG_20250930_203136.png deleted:    articles/saplit-article/IMG_20250930_203532.png modified:   articles/saplit-article/saplit-article.html modified:   articles/saplit-article/saplit-style.css modified:   articles/uno-article/uno-style.css new file:   articles/ws2-article/RLW-Thing.txt new file:   articles/ws2-article/photo-card-dropper.js new file:   articles/ws2-article/ws2-article.html new file:   articles/ws2-article/ws2-style.css modified:   index.html new file:   resources/favicon.ico new file:   resources/favicon.png renamed:    articles/ellawie-article/IMG_3261.PNG -> resources/general/ellawie/IMG_3261.PNG new file:   resources/general/ellawie/wmremove-transformed-thumb.jpeg renamed:    articles/ellawie-article/wmremove-transformed.jpeg -> resources/general/ellawie/wmremove-transformed.jpeg new file:   resources/general/ws2/IMG_20241003_064312-Edit.png new file:   resources/general/ws2/IMG_8379-Edit.png new file:   resources/polaroids/ws2/polaroid-1-rs.png new file:   resources/polaroids/ws2/polaroid-1.png new file:   resources/polaroids/ws2/polaroid-2-rs.png new file:   resources/polaroids/ws2/polaroid-2.png modified:   styles/menu-bar-container.css

--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vox Veritas</title>
+    <link rel="icon" type="image/x-icon" href="resources/favicon.ico" />
 
     <link rel="stylesheet" href="styles/debug.css" />
     <link rel="stylesheet" href="styles/globals.css" />
     <link rel="stylesheet" href="styles/home/home-articles.css" />
     <link rel="stylesheet" href="styles/home/home-background-container.css" />
-    <link rel="stylesheet" href="styles/home/home-load-begin.css" />
     <link rel="stylesheet" href="styles/home/home-main-content-container.css" />
     <link rel="stylesheet" href="styles/home/home-page-texts.css" />
-    <link rel="stylesheet" href="styles/load-effect-begin.css">
+    <link rel="stylesheet" href="styles/load-effect-begin.css" />
     <link rel="stylesheet" href="styles/load-effect.css" defer />
     <link rel="stylesheet" href="styles/home/home-polaroid-random.css" defer />
 
@@ -76,7 +76,9 @@
               >VERITAS</span
             >
           </h1>
-          <p class="home-text-x-large text-normal home-text-main fade-load-effect-3">
+          <p
+            class="home-text-x-large text-normal home-text-main fade-load-effect-3"
+          >
             Welcome to Vox Veritas where we uncovered the truth, raising
             awareness, and inspiring change. The Philippines stands at a road
             where justice and corruption constantly collide each breath we take.
@@ -187,7 +189,9 @@
               src="resources/general/sah/IMG_0992-rs.jpg"
               alt=""
             />
-            <h1 class="article-title home-text-main home-text-xx-large text-bolded wireframe">
+            <h1
+              class="article-title home-text-main home-text-xx-large text-bolded wireframe"
+            >
               Daily Struggles
             </h1>
             <p
@@ -203,7 +207,7 @@
           </button>
 
           <!-- SAPLIT ARTICLE -->
-           <button
+          <button
             class="article-card wireframe"
             onmouseup="redirectToArticle('articles/saplit-article/saplit-article.html')"
           >
@@ -212,13 +216,69 @@
               src="resources/general/saplit/IMG_20250929_230104.png"
               alt=""
             />
-            <h1 class="article-title home-text-main home-text-x-large text-bolded wireframe">
+            <h1
+              class="article-title home-text-main home-text-x-large text-bolded wireframe"
+            >
               Hindi Baha Ang Kaaway
             </h1>
             <p
               class="article-description home-text-main home-text-x-large text-normal wireframe"
             >
               BY SAPLIT
+            </p>
+            <p
+              class="article-button home-text-main home-text-x-large text-normal wireframe"
+            >
+              Click To View Artcle
+            </p>
+          </button>
+
+          <!-- ELLAWIE ARTICLE -->
+          <button
+            class="article-card wireframe"
+            onmouseup="redirectToArticle('articles/ellawie-article/ellawie-article.html')"
+          >
+            <img
+              class="article-image wireframe"
+              src="resources/general/ellawie/wmremove-transformed-thumb.jpeg"
+              alt=""
+            />
+            <h1
+              class="article-title home-text-main home-text-xx-large text-bolded wireframe"
+            >
+              Bare Feet
+            </h1>
+            <p
+              class="article-description home-text-main home-text-x-large text-normal wireframe"
+            >
+              BY ELLAWIE
+            </p>
+            <p
+              class="article-button home-text-main home-text-x-large text-normal wireframe"
+            >
+              Click To View Artcle
+            </p>
+          </button>
+
+          <!-- WS2 ARTICLE -->
+          <button
+            class="article-card wireframe"
+            onmouseup="redirectToArticle('articles/ws2-article/ws2-article.html')"
+          >
+            <img
+              class="article-image wireframe"
+              src="resources/general/ws2/IMG_8379-Edit.png"
+              alt=""
+            />
+            <h1
+              class="article-title home-text-main home-text-xx-large text-bolded wireframe"
+            >
+              Lost Greatnes
+            </h1>
+            <p
+              class="article-description home-text-main home-text-x-large text-normal wireframe"
+            >
+              BY WS2
             </p>
             <p
               class="article-button home-text-main home-text-x-large text-normal wireframe"
@@ -234,6 +294,12 @@
     <div id="menu-bar-container" class="wireframe fade-load-effect-2">
       <div id="menu-bar" class="blur-backround title-effect wireframe">
         <div id="menu-bar-title" class="wireframe">
+          <img
+            id="logo-vv"
+            src="resources/favicon.png"
+            alt=""
+            class="wireframe fade-load-effect-3"
+          />
           <span
             class="text-xx-large text-bolded text-red wireframe fade-load-effect-3"
             >VOX</span
