--- a/index.html
+++ b/index.html
@@ -273,12 +273,147 @@
             <h1
               class="article-title home-text-main home-text-xx-large text-bolded wireframe"
             >
-              Lost Greatnes
+              Lost Greatness
             </h1>
             <p
               class="article-description home-text-main home-text-x-large text-normal wireframe"
             >
               BY WS2
+            </p>
+            <p
+              class="article-button home-text-main home-text-x-large text-normal wireframe"
+            >
+              Click To View Artcle
+            </p>
+          </button>
+
+          <!-- ASTRAE ARTICLE -->
+          <button
+            class="article-card wireframe"
+            onmouseup="redirectToArticle('articles/astrae-article/astrae-article.html')"
+          >
+            <img
+              class="article-image wireframe"
+              src="resources/general/astrae/spook-rs.jpg"
+              alt=""
+            />
+            <h1
+              class="article-title home-text-main home-text-xx-large text-bolded wireframe"
+            >
+              Vox Veritas
+            </h1>
+            <p
+              class="article-description home-text-main home-text-x-large text-normal wireframe"
+            >
+              BY ASTRAE
+            </p>
+            <p
+              class="article-button home-text-main home-text-x-large text-normal wireframe"
+            >
+              Click To View Artcle
+            </p>
+          </button>
+
+          <!-- SLYFER ARTICLE -->
+          <button
+            class="article-card wireframe"
+            onmouseup="redirectToArticle('articles/slyfer-article/slyfer-article.html')"
+          >
+            <img
+              class="article-image wireframe"
+              src="articles/slyfer-article/slyfer.png"
+              alt=""
+            />
+            <h1
+              class="article-title home-text-main home-text-x-large text-bolded wireframe"
+            >
+              Sa Lilim Na Ginto
+            </h1>
+            <p
+              class="article-description home-text-main home-text-x-large text-normal wireframe"
+            >
+              BY SLYFER
+            </p>
+            <p
+              class="article-button home-text-main home-text-x-large text-normal wireframe"
+            >
+              Click To View Artcle
+            </p>
+          </button>
+
+          <!-- TIO/LUNTIANG ALON ARTICLE -->
+          <button
+            class="article-card wireframe"
+            onmouseup="redirectToArticle('articles/tio-luntiangalon-article/index.html')"
+          >
+            <img
+              class="article-image wireframe"
+              src="resources/general/behind-scene.png"
+              alt=""
+            />
+            <h1
+              class="article-title home-text-main home-text-x-large text-bolded wireframe"
+            >
+              Behind Sa Scenes
+            </h1>
+            <p
+              class="article-description home-text-main home-text-x-large text-normal wireframe"
+            >
+              BY TIO AND LUNTIANG ALON
+            </p>
+            <p
+              class="article-button home-text-main home-text-x-large text-normal wireframe"
+            >
+              Click To View Artcle
+            </p>
+          </button>
+
+          <!-- PHEONIX ARTICLE -->
+          <button
+            class="article-card wireframe"
+            onmouseup="redirectToArticle('articles/pheonix-article/pheonix-article.html')"
+          >
+            <img
+              class="article-image wireframe"
+              src="resources/general/behind-scene.png"
+              alt=""
+            />
+            <h1
+              class="article-title home-text-main home-text-x-large text-bolded wireframe"
+            >
+              In the Land of Many Islands
+            </h1>
+            <p
+              class="article-description home-text-main home-text-x-large text-normal wireframe"
+            >
+              BY PHEONIX
+            </p>
+            <p
+              class="article-button home-text-main home-text-x-large text-normal wireframe"
+            >
+              Click To View Artcle
+            </p>
+          </button>
+
+          <!-- NOCTILUCENT ARTICLE -->
+          <button
+            class="article-card wireframe"
+            onmouseup="redirectToArticle('articles/noctilucent-article/noctilucent-article.html')"
+          >
+            <img
+              class="article-image wireframe"
+              src="resources/general/behind-scene.png"
+              alt=""
+            />
+            <h1
+              class="article-title home-text-main home-text-x-large text-bolded wireframe"
+            >
+              Editorial
+            </h1>
+            <p
+              class="article-description home-text-main home-text-x-large text-normal wireframe"
+            >
+              BY NOCTILUCENT
             </p>
             <p
               class="article-button home-text-main home-text-x-large text-normal wireframe"
@@ -312,6 +447,7 @@
         <div id="menubar-navigation-container" class="wireframe">
           <button
             class="navigation-button text-red text-x-large text-bolded wireframe"
+            onmouseup="redirectToArticle('index.html#about-us-container')"
           >
             <img
               class="navigation-button-image wireframe"
@@ -322,6 +458,7 @@
           </button>
           <button
             class="navigation-button text-red text-x-large text-bolded wireframe"
+                        onmouseup="redirectToArticle('index.html#articles-stack-container')"
           >
             <img
               class="navigation-button-image wireframe"
