--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vox Veritas</title>
-    <link rel="icon" type="image/x-icon" href="resources/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="resources/favicon.png" />
 
     <link rel="stylesheet" href="styles/debug.css" />
     <link rel="stylesheet" href="styles/globals.css" />
@@ -341,33 +341,6 @@
             </p>
           </button>
 
-          <!-- TIO/LUNTIANG ALON ARTICLE -->
-          <button
-            class="article-card wireframe"
-            onmouseup="redirectToArticle('articles/tio-luntiangalon-article/index.html')"
-          >
-            <img
-              class="article-image wireframe"
-              src="resources/general/behind-scene.png"
-              alt=""
-            />
-            <h1
-              class="article-title home-text-main home-text-x-large text-bolded wireframe"
-            >
-              Behind Sa Scenes
-            </h1>
-            <p
-              class="article-description home-text-main home-text-x-large text-normal wireframe"
-            >
-              BY TIO AND LUNTIANG ALON
-            </p>
-            <p
-              class="article-button home-text-main home-text-x-large text-normal wireframe"
-            >
-              Click To View Artcle
-            </p>
-          </button>
-
           <!-- PHEONIX ARTICLE -->
           <button
             class="article-card wireframe"
@@ -375,7 +348,7 @@
           >
             <img
               class="article-image wireframe"
-              src="resources/general/behind-scene.png"
+              src="resources/general/pheonix/bianew-rs.jpg"
               alt=""
             />
             <h1
@@ -402,7 +375,7 @@
           >
             <img
               class="article-image wireframe"
-              src="resources/general/behind-scene.png"
+              src="resources/general/noctilucent/noctilucent.png"
               alt=""
             />
             <h1
@@ -414,6 +387,33 @@
               class="article-description home-text-main home-text-x-large text-normal wireframe"
             >
               BY NOCTILUCENT
+            </p>
+            <p
+              class="article-button home-text-main home-text-x-large text-normal wireframe"
+            >
+              Click To View Artcle
+            </p>
+          </button>
+
+          <!-- LUNTIANG ALON ARTICLE -->
+          <button
+            class="article-card wireframe"
+            onmouseup="redirectToArticle('articles/luntiang-alon/luntiangalon-article.html')"
+          >
+            <img
+              class="article-image wireframe"
+              src="articles/luntiang-alon/guiding_light.png"
+              alt=""
+            />
+            <h1
+              class="article-title home-text-main home-text-x-large text-bolded wireframe"
+            >
+              Guiding Light
+            </h1>
+            <p
+              class="article-description home-text-main home-text-x-large text-normal wireframe"
+            >
+              BY LUNTIANG ALON
             </p>
             <p
               class="article-button home-text-main home-text-x-large text-normal wireframe"
@@ -458,7 +458,7 @@
           </button>
           <button
             class="navigation-button text-red text-x-large text-bolded wireframe"
-                        onmouseup="redirectToArticle('index.html#articles-stack-container')"
+            onmouseup="redirectToArticle('index.html#articles-stack-container')"
           >
             <img
               class="navigation-button-image wireframe"
@@ -466,6 +466,18 @@
               alt=""
             />
             <p class="navigation-button-text text-x-large">Articles</p>
+          </button>
+
+          <button
+            class="navigation-button text-red text-x-large text-bolded wireframe"
+            onmouseup="redirectToArticle('articles/tio-luntiangalon-article/index.html')"
+          >
+            <img
+              class="navigation-button-image wireframe"
+              src="resources/general/article-icon-rs.png"
+              alt=""
+            />
+            <p class="navigation-button-text text-x-large">Member</p>
           </button>
         </div>
       </div>
