new file:   articles/lomi-article/Untitled370_20251006144648.png new file:   articles/lomi-article/lomi-article.html new file:   articles/lomi-article/lomi-style.css new file:   articles/lomi-article/photo-card-dropper.js new file:   articles/lomi-article/thumb.png modified:   index.html

--- a/index.html
+++ b/index.html
@@ -421,6 +421,33 @@
               Click To View Artcle
             </p>
           </button>
+
+          <!-- LOMI ARTICLE -->
+          <button
+            class="article-card wireframe"
+            onmouseup="redirectToArticle('articles/lomi-article/lomi-article.html')"
+          >
+            <img
+              class="article-image wireframe"
+              src="articles/lomi-article/thumb.png"
+              alt=""
+            />
+            <h1
+              class="article-title home-text-main home-text-x-large text-bolded wireframe"
+            >
+              Struggle
+            </h1>
+            <p
+              class="article-description home-text-main home-text-x-large text-normal wireframe"
+            >
+              BY LOMI
+            </p>
+            <p
+              class="article-button home-text-main home-text-x-large text-normal wireframe"
+            >
+              Click To View Artcle
+            </p>
+          </button>
         </div>
       </div>
     </div>
