--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
       <!-- FIRE BACKGROUND CONTAINER -->
       <video id="video-background-player" autoplay muted loop playsinline>
-        <source src="resources/bg_fire.webm" type="video/mp4" />
+        <source src="resources/bg_fire-fs.webm" type="video/mp4" />
       </video>
 
       <!-- PROTESTERS BACKGROUND CONTAINER -->
@@ -150,7 +150,7 @@
             <p
               class="article-button home-text-main home-text-x-large text-normal wireframe"
             >
-              Click To View Artcle
+              Click To View Photo Journal
             </p>
           </button>
           <!-- MALIGNO ARTICLE -->
@@ -176,7 +176,7 @@
             <p
               class="article-button home-text-main home-text-x-large text-normal wireframe"
             >
-              Click To View Artcle
+              Click To View Article
             </p>
           </button>
           <!-- SAH ARTICLE -->
@@ -202,7 +202,7 @@
             <p
               class="article-button home-text-main home-text-x-large text-normal wireframe"
             >
-              Click To View Artcle
+                            Click To View Photo Journal
             </p>
           </button>
 
@@ -229,7 +229,7 @@
             <p
               class="article-button home-text-main home-text-x-large text-normal wireframe"
             >
-              Click To View Artcle
+                            Click To View Photo Journal
             </p>
           </button>
 
@@ -256,7 +256,7 @@
             <p
               class="article-button home-text-main home-text-x-large text-normal wireframe"
             >
-              Click To View Artcle
+                            Click To View Photo Journal
             </p>
           </button>
 
@@ -283,7 +283,7 @@
             <p
               class="article-button home-text-main home-text-x-large text-normal wireframe"
             >
-              Click To View Artcle
+                            Click To View Photo Journal
             </p>
           </button>
 
@@ -310,7 +310,7 @@
             <p
               class="article-button home-text-main home-text-x-large text-normal wireframe"
             >
-              Click To View Artcle
+              Click To View Poem
             </p>
           </button>
 
@@ -321,7 +321,7 @@
           >
             <img
               class="article-image wireframe"
-              src="articles/slyfer-article/slyfer.png"
+              src="articles/slyfer-article/slyfer-rs.png"
               alt=""
             />
             <h1
@@ -337,7 +337,7 @@
             <p
               class="article-button home-text-main home-text-x-large text-normal wireframe"
             >
-              Click To View Artcle
+              Click To View Poem
             </p>
           </button>
 
@@ -364,7 +364,7 @@
             <p
               class="article-button home-text-main home-text-x-large text-normal wireframe"
             >
-              Click To View Artcle
+              Click To View Poem
             </p>
           </button>
 
@@ -391,7 +391,7 @@
             <p
               class="article-button home-text-main home-text-x-large text-normal wireframe"
             >
-              Click To View Artcle
+              Click To View Editorial
             </p>
           </button>
 
@@ -418,7 +418,7 @@
             <p
               class="article-button home-text-main home-text-x-large text-normal wireframe"
             >
-              Click To View Artcle
+              Click To View Article
             </p>
           </button>
 
@@ -445,7 +445,7 @@
             <p
               class="article-button home-text-main home-text-x-large text-normal wireframe"
             >
-              Click To View Artcle
+              Click To View Article
             </p>
           </button>
         </div>
