--- a/index.html
+++ b/index.html
@@ -35,27 +35,31 @@
 
       <!-- PROTESTERS BACKGROUND CONTAINER -->
       <img
+        loading="lazy"
         id="protesters-variant-4"
         class="protesters-background"
-        src="resources/protesters-background/bg-4-opt.png"
+        src="resources/protesters-background/protesters_4-rs.png"
         alt=""
       />
       <img
+        loading="lazy"
         id="protesters-variant-3"
         class="protesters-background"
-        src="resources/protesters-background/bg-3-opt.png"
+        src="resources/protesters-background/protesters_3-rs.png"
         alt=""
       />
       <img
+        loading="lazy"
         id="protesters-variant-2"
         class="protesters-background"
-        src="resources/protesters-background/bg-2-opt.png"
+        src="resources/protesters-background/protesters_2-rs.png"
         alt=""
       />
       <img
+        loading="lazy"
         id="protesters-variant-1"
         class="protesters-background"
-        src="resources/protesters-background/bg-1-opt.png"
+        src="resources/protesters-background/protesters_1-rs.png"
         alt=""
       />
     </div>
@@ -92,6 +96,7 @@
         <div id="random-polaroids-container">
           <div id="rplextracontainer">
             <img
+              loading="lazy"
               id="homescreen-polaroids-v1"
               class="random-polaroid-photos active"
               src="none"
@@ -99,6 +104,7 @@
               srcset=""
             />
             <img
+              loading="lazy"
               id="homescreen-polaroids-v2"
               class="random-polaroid-photos active"
               src="none"
@@ -106,6 +112,7 @@
               srcset=""
             />
             <img
+              loading="lazy"
               id="homescreen-polaroids-v3"
               class="random-polaroid-photos active"
               src="none"
@@ -130,11 +137,12 @@
           <!-- UNO ARTICLE -->
           <button
             class="article-card wireframe"
-            onmouseup="redirectToArticle('articles/uno-article/uno-article.html')"
+            onmouseup="redirectToArticle('articles/uno-article.html')"
           >
             <img
+              loading="lazy"
               class="article-image wireframe"
-              src="resources/general/uno/IMG_3751-rs.JPG"
+              src="resources/general/uno/uno_1-rs.jpg"
               alt=""
             />
             <h1
@@ -159,8 +167,9 @@
             onmouseup="redirectToArticle('articles/maligno-article/maligno-article.html')"
           >
             <img
+              loading="lazy"
               class="article-image wireframe"
-              src="articles/maligno-article/corruption-thumbnail.png"
+              src="resources/general/maligno/maligno_cor_thmb-rs.png"
               alt=""
             />
             <h1
@@ -182,9 +191,10 @@
           <!-- SAH ARTICLE -->
           <button
             class="article-card wireframe"
-            onmouseup="redirectToArticle('articles/sah-article/sah-article.html')"
+            onmouseup="redirectToArticle('articles/sah-article.html')"
           >
             <img
+              loading="lazy"
               class="article-image wireframe"
               src="resources/general/sah/IMG_0992-rs.jpg"
               alt=""
@@ -202,16 +212,17 @@
             <p
               class="article-button home-text-main home-text-x-large text-normal wireframe"
             >
-                            Click To View Photo Journal
+              Click To View Photo Journal
             </p>
           </button>
 
           <!-- SAPLIT ARTICLE -->
           <button
             class="article-card wireframe"
-            onmouseup="redirectToArticle('articles/saplit-article/saplit-article.html')"
+            onmouseup="redirectToArticle('articles/saplit-article.html')"
           >
             <img
+              loading="lazy"
               class="article-image wireframe"
               src="resources/general/saplit/IMG_20250929_230104.png"
               alt=""
@@ -229,16 +240,17 @@
             <p
               class="article-button home-text-main home-text-x-large text-normal wireframe"
             >
-                            Click To View Photo Journal
+              Click To View Photo Journal
             </p>
           </button>
 
           <!-- ELLAWIE ARTICLE -->
           <button
             class="article-card wireframe"
-            onmouseup="redirectToArticle('articles/ellawie-article/ellawie-article.html')"
+            onmouseup="redirectToArticle('articles/ellawie-article.html')"
           >
             <img
+              loading="lazy"
               class="article-image wireframe"
               src="resources/general/ellawie/wmremove-transformed-thumb.jpeg"
               alt=""
@@ -256,16 +268,17 @@
             <p
               class="article-button home-text-main home-text-x-large text-normal wireframe"
             >
-                            Click To View Photo Journal
+              Click To View Photo Journal
             </p>
           </button>
 
           <!-- WS2 ARTICLE -->
           <button
             class="article-card wireframe"
-            onmouseup="redirectToArticle('articles/ws2-article/ws2-article.html')"
+            onmouseup="redirectToArticle('articles/ws2-article.html')"
           >
             <img
+              loading="lazy"
               class="article-image wireframe"
               src="resources/general/ws2/IMG_8379-Edit.png"
               alt=""
@@ -283,16 +296,17 @@
             <p
               class="article-button home-text-main home-text-x-large text-normal wireframe"
             >
-                            Click To View Photo Journal
+              Click To View Photo Journal
             </p>
           </button>
 
           <!-- ASTRAE ARTICLE -->
           <button
             class="article-card wireframe"
-            onmouseup="redirectToArticle('articles/astrae-article/astrae-article.html')"
+            onmouseup="redirectToArticle('articles/astrae-article.html')"
           >
             <img
+              loading="lazy"
               class="article-image wireframe"
               src="resources/general/astrae/spook-rs.jpg"
               alt=""
@@ -320,8 +334,9 @@
             onmouseup="redirectToArticle('articles/slyfer-article/slyfer-article.html')"
           >
             <img
+              loading="lazy"
               class="article-image wireframe"
-              src="articles/slyfer-article/slyfer-rs.png"
+              src="resources/general/slyfer/slyfer-rs.png"
               alt=""
             />
             <h1
@@ -344,9 +359,10 @@
           <!-- PHEONIX ARTICLE -->
           <button
             class="article-card wireframe"
-            onmouseup="redirectToArticle('articles/pheonix-article/pheonix-article.html')"
+            onmouseup="redirectToArticle('articles/pheonix-article.html')"
           >
             <img
+              loading="lazy"
               class="article-image wireframe"
               src="resources/general/pheonix/bianew-rs.jpg"
               alt=""
@@ -371,9 +387,10 @@
           <!-- NOCTILUCENT ARTICLE -->
           <button
             class="article-card wireframe"
-            onmouseup="redirectToArticle('articles/noctilucent-article/noctilucent-article.html')"
+            onmouseup="redirectToArticle('articles/noctilucent-article.html')"
           >
             <img
+              loading="lazy"
               class="article-image wireframe"
               src="resources/general/noctilucent/noctilucent.png"
               alt=""
@@ -398,11 +415,12 @@
           <!-- LUNTIANG ALON ARTICLE -->
           <button
             class="article-card wireframe"
-            onmouseup="redirectToArticle('articles/luntiang-alon/luntiangalon-article.html')"
+            onmouseup="redirectToArticle('articles/luntiangalon-article.html')"
           >
             <img
+              loading="lazy"
               class="article-image wireframe"
-              src="articles/luntiang-alon/guiding_light.png"
+              src="resources/general/luntiang-alon/luantiang_along_thmb-rs.png"
               alt=""
             />
             <h1
@@ -425,11 +443,12 @@
           <!-- LOMI ARTICLE -->
           <button
             class="article-card wireframe"
-            onmouseup="redirectToArticle('articles/lomi-article/lomi-article.html')"
+            onmouseup="redirectToArticle('articles/lomi-article.html')"
           >
             <img
+              loading="lazy"
               class="article-image wireframe"
-              src="articles/lomi-article/thumb.png"
+              src="resources/general/lomi/thumb.png"
               alt=""
             />
             <h1
@@ -457,6 +476,7 @@
       <div id="menu-bar" class="blur-backround title-effect wireframe">
         <div id="menu-bar-title" class="wireframe">
           <img
+            loading="lazy"
             id="logo-vv"
             src="resources/favicon.png"
             alt=""
@@ -477,8 +497,9 @@
             onmouseup="redirectToArticle('index.html#about-us-container')"
           >
             <img
+              loading="lazy"
               class="navigation-button-image wireframe"
-              src="resources/general/home-icon-rs.png"
+              src="resources/general/home_icon-rs.png"
               alt=""
             />
             <p class="navigation-button-text text-x-large">Home</p>
@@ -488,8 +509,9 @@
             onmouseup="redirectToArticle('index.html#articles-stack-container')"
           >
             <img
+              loading="lazy"
               class="navigation-button-image wireframe"
-              src="resources/general/article-icon-rs.png"
+              src="resources/general/article_icon-rs.png"
               alt=""
             />
             <p class="navigation-button-text text-x-large">Articles</p>
@@ -500,8 +522,9 @@
             onmouseup="redirectToArticle('articles/tio-luntiangalon-article/index.html')"
           >
             <img
+              loading="lazy"
               class="navigation-button-image wireframe"
-              src="resources/general/member-icon-rs.png"
+              src="resources/general/member_icon-rs.png"
               alt=""
             />
             <p class="navigation-button-text text-x-large">Member</p>
